<resources>
    <string name="DeliveredCardColor">#B5CFB5</string>
    <string name="CancelledOrderColor">#000000</string>
    <string name="app_name">HomeFoods</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bDishDescScreenNavigation">Dish Desc</string>
    <string name="title_activity_dish_desc">HomeFoods</string>
    <string name="INR">\u20B9 0</string>
    <string name="Rs">\u20B9</string>
    <string name="bAddToBag">Add to Bag</string>
    <string name="title_activity_dish_desc_prep_tab">DishDescPrepTab</string>
    <string name="bCheckoutScreenNavigate">Checkout</string>
    <string name="title_activity_order_review">HomeFoods</string>
    <string name="title_activity_chef_order_delivery">ChefOrderDelivery</string>
    <string name="bChefDeliveryScreenNavigate">Chef Delivery Page</string>
    <string name="title_activity_chef_menu">ChefMenu</string>
    <string name="title_activity_chef_dish_edit">ChefDishEdit</string>
    <string name="etDishEditDishNameHint">Dish Name</string>
    <string name="etDishEditDishInfoHint">Dish Info</string>
    <string name="etDishEditDishPrepHint">Dish Preparation Method</string>
    <string name="unit_prompt">Choose Unit</string>
    <string name="bRetrieve">Retrieve</string>
    <string name="etFoodieOrderHint">Foodie Order String</string>
    <string-array name="unit_array">
        <item>Grams</item>
        <item>Liters</item>
    </string-array>


    <string-array name="cuisine_picker_array">
        <item>Indian</item>
        <item>Thai</item>
        <item>Chinese</item>
        <item>Mexican</item>
        <item>American</item>
        <item>Italian</item>
    </string-array>
    <string name="title_activity_chef_home_page">Home Page</string>
    <string name="bHomePageScreenNavigate">Home Page</string>
    <string name="title_activity_foodie_results">Search Results</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="bRegister">Register</string>
    <string name="bSignIn">Sign In</string>
    <string name="title_activity_log_in">LogIn</string>

    <!-- Nav Drawer Menu Items.
         If you modify Menu items, modify corresponding Integers.xml values as well -->
    <string-array name="nav_drawer_chef_items">
        <item>Home</item>
        <item>Menu</item>
        <item>Deliver</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_chef_icons">
        <item>@mipmap/ic_home</item>
        <item>@mipmap/ic_menu</item>
        <item>@mipmap/ic_menu</item>
    </array>

    <!-- Nav Drawer Menu Items.
         If you modify Menu items, modify corresponding Integers.xml values as well -->

    <string-array name="nav_drawer_foodie_items">
        <item>Home</item>
        <item>Order history</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_foodie_icons">
        <item>@mipmap/ic_home</item>
        <item>@mipmap/ic_history</item>
    </array>
    <string name="sign_out">Sign Out</string>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_maps">Map</string>
    <string name="tvDisplayNameRule">Please note that display name is one time choosable. Once registered, it can\'t be changed.</string>
    <string name="tvCancel">X</string>
    <string name="etDisplayNameHint">Display Name</string>
    <string name="bRegisterImageNext">Next</string>
    <string name="etPhoneNumberHint">Phone Number</string>
    <string name="etAdress1Hint">Address 1</string>
    <string name="etAddress2Hint">Address 2</string>
    <string name="etCityHint">City/Town</string>
    <string name="etStateHint">State</string>
    <string name="etZipCodeHint">ZIP code</string>
    <string name="etCountryHint">Country</string>
    <string name="etFavoriteFoodsHint">Favorite Foods</string>
    <string name="etSpecialitiesHint">Specialities: what are you special at?</string>
    <string name="etHobbiesHint">What are your hobbies?</string>
    <string name="bRegisterSubmit">Submit</string>
    <string name="title_activity_chef_dish_desc1">ChefDishDesc1</string>

</resources>
