<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="5dp"
        android:clickable="true"
        android:text="@string/tvCancel"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/black" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvCancel">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etAddress1Widget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="16dp">

                <EditText
                    android:id="@+id/etAddress1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/etAdress1Hint"
                    android:singleLine="true"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etAddress2Widget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/etAddress1Widget"
                android:layout_below="@+id/etAddress1Widget"
                android:layout_marginTop="12dp">

                <EditText
                    android:id="@+id/etAddress2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/etAddress2Hint"
                    android:singleLine="true"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etCityWidget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/etAddress2Widget"
                android:layout_below="@+id/etAddress2Widget"
                android:layout_marginTop="12dp">

                <EditText
                    android:id="@+id/etCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/etCityHint"
                    android:singleLine="true"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etStateWidget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/etCityWidget"
                android:layout_below="@+id/etCityWidget"
                android:layout_marginTop="12dp">

                <EditText
                    android:id="@+id/etState"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/etStateHint"
                    android:singleLine="true"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etZipCodeWidget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/etStateWidget"
                android:layout_below="@+id/etStateWidget"
                android:layout_marginTop="12dp">

                <EditText
                    android:id="@+id/etZipCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/etZipCodeHint"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etCountryWidget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/etZipCodeWidget"
                android:layout_below="@+id/etZipCodeWidget"
                android:layout_marginTop="12dp">

                <EditText
                    android:id="@+id/etCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/etCountryHint"
                    android:singleLine="true"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/bRegisterContactInfoNext"
                style="?bAddToBag"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etCountryWidget"
                android:layout_marginTop="16dp"
                android:text="@string/bRegisterImageNext" />

        </RelativeLayout>

    </ScrollView>
</RelativeLayout>

