<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="5dp"
        android:clickable="true"
        android:text="@string/tvCancel"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/black" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvCancel">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etFavoriteFoodsWidget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="16dp">

                <EditText
                    android:id="@+id/etFavoriteFoods"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_bg"
                    android:gravity="top|start"
                    android:inputType="textMultiLine"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="16sp"
                    android:hint="@string/etFavoriteFoodsHint"
                    android:lines="4"
                    android:maxLines="6"
                    android:scrollbars="vertical" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etSpecialitiesWidget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/etFavoriteFoodsWidget"
                android:layout_below="@+id/etFavoriteFoodsWidget"
                android:layout_marginTop="12dp">

                <EditText
                    android:id="@+id/etSpecialities"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_bg"
                    android:gravity="top|start"
                    android:inputType="textMultiLine"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="16sp"
                    android:hint="@string/etSpecialitiesHint"
                    android:lines="6"
                    android:maxLines="8"
                    android:scrollbars="vertical" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etHobbiesWidget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/etSpecialitiesWidget"
                android:layout_below="@+id/etSpecialitiesWidget"
                android:layout_marginTop="12dp">

                <EditText
                    android:id="@+id/etHobbies"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_bg"
                    android:gravity="top|start"
                    android:inputType="textMultiLine"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="16sp"
                    android:hint="@string/etHobbiesHint"
                    android:lines="6"
                    android:maxLines="8"
                    android:scrollbars="vertical" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/bRegisterSubmit"
                style="?bAddToBag"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etHobbiesWidget"
                android:layout_marginTop="16dp"
                android:text="@string/bRegisterSubmit" />

        </RelativeLayout>

    </ScrollView>
</RelativeLayout>

