<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="5dp"
        android:clickable="true"
        android:text="@string/tvCancel"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/black" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvCancel">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/tvDisplayNameRule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/tvDisplayNameRule"
                android:textColor="@android:color/holo_orange_light"
                android:textSize="12sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etDisplayNameWidget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvDisplayNameRule">

                <EditText
                    android:id="@+id/etDisplayName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:hint="@string/etDisplayNameHint"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>


            <RelativeLayout
                android:id="@+id/rlProfileImage"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@+id/etDisplayNameWidget">

                <com.apps.b3bytes.homefoods.utils.CircularImageView
                    android:id="@+id/ivProfileImage"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_centerInParent="true"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_chef_image"
                    app:border_color="@android:color/darker_gray"
                    app:border_width="1dp" />

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/ivProfileImage"
                    android:layout_alignLeft="@id/ivProfileImage"
                    android:layout_alignRight="@id/ivProfileImage"
                    android:background="#80EF431C"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="Change" />
            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etPhoneNumberWidget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlProfileImage">

                <EditText
                    android:id="@+id/etPhoneNumber"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:hint="@string/etPhoneNumberHint"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/bRegisterImageNext"
                style="?bAddToBag"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etPhoneNumberWidget"
                android:layout_marginTop="12dp"
                android:text="@string/bRegisterImageNext" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>